Make code improvments suggested by Eclipse/FindBugs